--- a/index.html
+++ b/index.html
@@ -48,6 +48,111 @@
         </div>
         
     </header>
+    <main class="main">
+        <section class="catalog">
+            <div class="container">
+                <h2 class="catalog__title">Для любых событий и дорогих вам людей</h2>
+                <div class="catalog__group">
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img1.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Кремовый замок</div>
+                            <div class="catalog__item-description">Нежный крем любого цвета на выбор, вафельная основа</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img2.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Малиновый рай</div>
+                            <div class="catalog__item-description">Воздушный крем, темная основа и ягода малины</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img3.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Фейерверк</div>
+                            <div class="catalog__item-description">Разноцветные крем, с бисквитной основой</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img4.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Шоколадный мир</div>
+                            <div class="catalog__item-description">Ореховая стружка, нежный крем и шоколадная основа</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img5.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Слезы дракона</div>
+                            <div class="catalog__item-description">Нежный крем любого цвета на выбор, вафельная основа</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img6.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Летняя фантазия</div>
+                            <div class="catalog__item-description">Украшения в форме сердец, для любимого человека</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img7.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Мыс безумия</div>
+                            <div class="catalog__item-description">Разноцветная основа, стружка и нежный крем</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img8.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Облачная сказка</div>
+                            <div class="catalog__item-description">Светлая основа, нежный крем со стружкой сверху</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                    <div class="catalog__group-item">
+                        <img src="img/catalog-img9.png" alt="" class="catalog__item-img">
+                        <div class="catalog__item-info">
+                            <div class="catalog__item-title">Темный рыцарь</div>
+                            <div class="catalog__item-description">Тёмная основа, нежный крем и вкусные шарики</div>
+                            <div class="catalog__item-price">150 ₽/шт.</div>
+                            <button class="btn catalog__btn">Заказать</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="byphoto">
+            <div class="byphoto__cloud byphoto__cloud--up"></div>
+            <div class="container">
+                <div class="byphoto__inner">
+                    <div class="byphoto__info">
+                        <div class="byphoto__supertitle">Не нашли то что нужно?</div>
+                        <h1 class="byphoto__title">Приготовим заказ любой сложности по фото или эскизу</h1>
+                        <p class="byphoto__description">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</p>
+                        <button class="byphoto__btn btn">Загрузить фотографию</button>
+                    </div>
+                </div>
+            </div>
+            <div class="byphoto__cloud byphoto__cloud--down"></div>
+        </section>
+    </main>
+
     
 </body>
 </html>
