Added more sections

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
             <div class="header__content">
-                <div class="header__supertitle">вкуснейшие</div>
+                <div class="header__supertitle supertitle">вкуснейшие</div>
                 <h1 class="header__title">Пирожные и капкейки от 150 ₽/шт. с доставкой по Санкт Петербургу</h1>
                 <p class="header__description">Приготовим за 3 часа в день заказа. 
                     Доставка на авто в холодильнике.
@@ -142,7 +142,7 @@
             <div class="container">
                 <div class="byphoto__inner">
                     <div class="byphoto__info">
-                        <div class="byphoto__supertitle">Не нашли то что нужно?</div>
+                        <div class="supertitle byphoto__supertitle">Не нашли то что нужно?</div>
                         <h1 class="byphoto__title">Приготовим заказ любой сложности по фото или эскизу</h1>
                         <p class="byphoto__description">Загрузите фотографию или эскиз капкейков и мы рассчитаем стоимость за 30 минут</p>
                         <button class="byphoto__btn btn">Загрузить фотографию</button>
@@ -150,6 +150,30 @@
                 </div>
             </div>
             <div class="byphoto__cloud byphoto__cloud--down"></div>
+        </section>
+
+        <section class="author">
+            <div class="container">
+                <div class="author__inner">
+                    <div class="author__info">
+                        <div class="author__supertitle supertitle">Кто будет готовить?</div>
+                        <h2 class="author__title">Лично приготовлю и всё красиво упакую для вашего события</h2>
+                        <ul class="author__list">
+                            <li class="author__list-item">Проконсультирую по выбору капкейков и придумаю нестандартную идею</li>
+                            <li class="author__list-item">Приготовлю капкейки для вашего события, которые обязательно всем понравятся</li>
+                            <li class="author__list-item">Аккуратно и красиво всё упакую, если вы хотите сделать приятный подарок</li>
+                        </ul>
+                        <button class="btn author__btn">Задать вопрос Юлии</button>
+                    </div>
+                    
+                    <img class="author__photo" src="img/author-photo.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <section class="reviews">
+            <div class="reviews__cloud reviews__cloud--up"></div>
+            <div class="reviews__block"></div>
         </section>
     </main>
 
